--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "license": "MPL",
   "private": true,
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
+    "prettier": "^2.0.5",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.2",
     "webpack": "^4.43.0",
@@ -14,6 +21,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "start": "webpack-dev-server --hot --inline --watch-content-base --content-base public/"
+    "start": "webpack-dev-server --hot --inline --watch-content-base --content-base public/",
+    "lint": "eslint ./src/**/*.ts",
+    "lint:fix": "yarn lint --fix"
   }
 }
