--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,18 @@
   "compilerOptions": {
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "es6",
+    "noImplicitAny": false,
+    "module": "commonjs",
+    "esModuleInterop": true,
     "target": "es5",
     "jsx": "react",
     "strict": true,
-  }
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+      "node_modules",
+      "**/*.spec.ts"
+  ]
 }
