--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "eventemitter3": "^4.0.4",
     "fontfaceobserver": "^2.1.0",
-    "pixi.js": "^5.2.4"
+    "pixi.js": "^5.2.4",
+    "raw-loader": "^4.0.1"
   }
 }
