--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "outDir": "./dist/",
     "sourceMap": true,
-    "noImplicitAny": false,
+    "noImplicitAny": true,
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es5",
