--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "noImplicitAny": true,
     "module": "commonjs",
     "esModuleInterop": true,
+    "lib": ["dom", "es2019"],
     "target": "es5",
     "jsx": "react",
     "strict": true
