--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@types/eventemitter3": "^2.0.2",
     "@types/fontfaceobserver": "^0.0.6",
+    "@types/parsimmon": "^1.10.2",
     "@types/pixi.js": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
@@ -15,8 +16,10 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "parsimmon": "^1.14.0",
     "prettier": "^2.0.5",
     "ts-loader": "^7.0.4",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.2",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
