--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ end_of_line = lf
 indent_style = space
 indent_size = 2
 
-[*.{ts,js,json}]
+[*.{ts,js,vs,json}]
 indent_style = space
 indent_size = 2
 
