--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noImplicitAny": true,
     "module": "ES2015",
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "lib": ["dom", "es2019"],
     "target": "es5",
     "strict": true,
