--- a/package.json
+++ b/package.json
@@ -49,11 +49,7 @@
     "rollup": "^2.26.5",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.27.2",
-    "ts-loader": "^7.0.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.2",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^3.9.2"
   }
 }
