--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "vn.js",
-  "version": "0.0.1",
+  "name": "@ash-r1/vn.js",
+  "version": "0.0.2",
   "repository": "git@github.com:ash-r1/VN.js.git",
   "author": "Ash <ash.suzuki.r1@gmail.com>",
   "license": "MPL",
-  "private": true,
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "module": "dist/index.es.js",
