--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "rollup -c",
     "lint": "eslint ./src/**/*.ts",
     "lint:fix": "yarn lint --fix",
+    "test": "jest",
     "generate": "yarn ts-node --compiler-options '{\"module\":\"commonjs\"}' vs-parser/cmd/generate",
     "parse": "yarn ts-node --compiler-options '{\"module\":\"commonjs\"}' vs-parser/cmd/parse"
   },
@@ -34,16 +35,22 @@
     "raw-loader": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-typescript": "^7.10.4",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@types/fontfaceobserver": "^0.0.6",
+    "@types/jest": "^26.0.13",
     "@types/parsimmon": "^1.10.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
+    "babel-jest": "^26.3.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "rollup": "^2.26.5",
     "rollup-plugin-string": "^3.0.0",
