run Github Actions when pushed only if it targets master

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,8 +5,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ '**' ]
-    tags: [ '**' ]
+    branches: [ 'master' ]
   release:
     types: [ 'created' ]
   pull_request:
