--- a/package.json
+++ b/package.json
@@ -44,18 +44,22 @@
     "@babel/preset-typescript": "^7.10.4",
     "@rollup/plugin-commonjs": "^15.0.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@types/chalk": "^2.2.0",
     "@types/eslint": "^7.2.2",
+    "@types/filesize": "^5.0.0",
     "@types/fontfaceobserver": "^0.0.6",
     "@types/jest": "^26.0.13",
     "@types/parsimmon": "^1.10.2",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "babel-jest": "^26.3.0",
+    "chalk": "^4.1.0",
     "chokidar": "^3.4.2",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-simple-import-sort": "^5.0.3",
+    "filesize": "^6.1.0",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "rollup": "^2.26.5",
