--- a/package.json
+++ b/package.json
@@ -29,14 +29,18 @@
     "types"
   ],
   "dependencies": {
+    "chalk": "^4.1.0",
     "change-case": "^4.1.1",
+    "chokidar": "^3.4.2",
     "eventemitter3": "^4.0.4",
+    "filesize": "^6.1.0",
     "fontfaceobserver": "^2.1.0",
     "parsimmon": "^1.14.0",
     "pixi-filters": "^3.1.1",
     "pixi-sound": "^3.0.5",
     "pixi.js": "^5.3.3",
-    "raw-loader": "^4.0.1"
+    "raw-loader": "^4.0.1",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -53,20 +57,16 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "babel-jest": "^26.3.0",
-    "chalk": "^4.1.0",
-    "chokidar": "^3.4.2",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-simple-import-sort": "^5.0.3",
-    "filesize": "^6.1.0",
     "jest": "^26.4.2",
     "prettier": "^2.0.5",
     "rollup": "^2.26.5",
     "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.27.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.2",
-    "watch": "^1.0.2"
+    "typescript": "^3.9.2"
   }
 }
