--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "sourceMap": true,
     "noImplicitAny": true,
     "module": "ES2015",
+    "jsx": "react",
     "esModuleInterop": true,
     "moduleResolution": "node",
     "lib": ["dom", "es2019"],
